--- a/src/App.css
+++ b/src/App.css
@@ -18,12 +18,13 @@ body {
 }
 
 div {
-  width: 100%;
-  max-width: 600px;
-  margin: 20px;
-  padding: 20px;
+  width: 80%;
+  max-width: 500px;
+  margin: 10px;
+  padding: 10px;
   background-color: white;
   border-radius: 8px;
+  margin-left: 40px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
 
